--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Academy R & R</title>
+    <title>Academy R  R</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -178,25 +178,37 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Academy R & R 2017</p>
+                    <p>Copyright &copy; Academy R  R 2017</p>
                 </div>
             </div>
         </footer>
 
     </div>
-    <!-- /.container -->
+    <!-- /.container 
 
-     
-         <script src="js/angular.min.js"></script>
-    <script src="js/angular-route.min.js"></script>
+
+<script src="js/angular.min.js"></script>
+ <script src="js/angular-route.min.js"></script>-->
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
 
+
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.20/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.20/angular-route.js"></script>
+    <script src="http://code.angularjs.org/1.2.13/angular-cookies.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <script type="js/app.js"></script>
+  <!--  <script type="js/app.js"></script>-->
+
+     <script  src="js/app.js"></script>
+
+
+
 </body>
 
 </html>
