--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                             <div class="container">
                             <div class="row">
-                                <a class="btn btn-primary" id="RankLecturerBut"  data-ng-click="moveToRankLecturer('RankLecturer')"> Rank 2</a>
+                                <a class="btn btn-primary" id="RankLecturerBut"  data-ng-click="moveToRankLecturer('RankLecturer')"> Rank </a>
                                 <a  class="btn btn-primary" id="firstBut" data-ng-click="moveToViewLecturer('ViewLecturerRaiting')"> View </a>
                             </div>
                             </div>
