--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <a class="navbar-brand" data-ng-click="navAcademyCont('/')">Academy R & R</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
+                    <li >
+                        <a href="#/AddLecCourse">Add Course/Lectuerer</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#/AboutUs">About</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
