added View table academy

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" data-ng-click="navAcademyCont('/')">Academy R & R</a>
+                <a class="navbar-brand" href="" data-ng-click="navAcademyCont('/')">Academy R & R</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav">
                     <li >
-                        <a href="#/AddLecCourse">Add Course/Lectuerer</a>
+                        <a href="" data-ng-click="moveToPath('AddLecCourse')">Add Course/Lectuerer</a>
                     </li>
                     <li>
-                        <a href="#/AboutUs">About</a>
+                        <a href="" data-ng-click="moveToPath('About')">About</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -203,6 +203,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.progressTimer.js"></script>
 
   <!--  <script type="js/app.js"></script>-->
 
