--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav">
                     <li >
-                        <a href="" data-ng-click="moveToPath('AddLecCourse')">Add Course/Lectuerer</a>
+                        <a href="" data-ng-click="moveToPath('AddLecCourse')" onclick="window.location.reload(true);">Add Course/Lectuerer</a>
                     </li>
                     <li>
                         <a href="" data-ng-click="moveToPath('About')">About</a>
