--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="" data-ng-click="moveToPath('About')">About</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="" data-ng-click="moveToPath('Contact')">Contact</a>
                     </li>
                 </ul>
             </div>
