pit is gay button

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                             <div class="row">
                                 <a class="btn btn-primary" id="RankLecturerBut"  data-ng-click="moveToRankLecturer('RankLecturer')"> Rank </a>
                                 <a  class="btn btn-primary" id="firstBut" data-ng-click="moveToViewLecturer('ViewLecturerRaiting')"> View </a>
+                                <a  class="btn btn-primary" id="SyllabusBut" data-ng-click="navAcademyCont('Syllabus')"> Syllabus </a>
                             </div>
                             </div>
                             
