--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="" data-ng-click="moveToPath('About')">About</a>
                     </li>
                     <li>
-                        <a href=""   data-toggle="modal" data-target="#contact" data-original-title>Contact</a>
+                        <a href="" data-ng-click="moveToContact('contactUs')"  data-toggle="modal" data-target="#contact" data-original-title>Contact</a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +82,7 @@
                         <div class="panel panel-primary">
                         <div class="panel-heading"> Choose academy/Faculty</div>
                             <div class="panel-body">
-                                <select class="selectpicker" data-live-search="true" data-style="btn-info" id= "dropdownAcademy">
+                                <select class="selectpicker" data-live-search="true" name="dropdownAcademyName" data-style="btn-info" id= "dropdownAcademy">
                                     <option>Select Academy</option>
                                 </select>
 
@@ -125,7 +125,7 @@
                             <div class="row">
                                 <a class="btn btn-primary" id="RankLecturerBut"  data-ng-click="moveToRankLecturer('RankLecturer')"> Rank </a>
                                 <a  class="btn btn-primary" id="firstBut" data-ng-click="moveToViewLecturer('ViewLecturerRaiting')"> View </a>
-                                <a  class="btn btn-primary" id="SyllabusBut" data-ng-click="navAcademyCont('Syllabus')"> Syllabus </a>
+                                <a  class="btn btn-primary" id="SyllabusBut" data-ng-click="navCourseDet('Syllabus')"> Syllabus </a>
                             </div>
                             </div>
                             
