--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="" data-ng-click="moveToPath('About')">About</a>
                     </li>
                     <li>
-                        <a href="" data-ng-click="moveToContact('contactUs')"  data-toggle="modal" data-target="#contact" data-original-title>Contact</a>
+                        <a href=""  data-ng-click="moveToContact('contactUs')" >Contact</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +118,6 @@
 <div data-ng-view=""></div>
 
 
-<div id="includedContent"></div>
 
 </div>
 
@@ -179,9 +178,9 @@
 
 <script type="text/javascript">
   
- $(function(){
-      $("#includedContent").load("partials/contact.html"); 
-    });
+//$(function(){
+//     $("#includedContent").load("partials/contact.html"); 
+//   });
 </script>
 
 
